# Evergreen

./: .env.example  .gitignore  EVERGREEN_CONTEXT.md  EVERGREEN_FAKE_COMPANY.md  EVERGREEN_MARKET_WATCHER.md  EVERGREEN_NEXT.md  EVERGREEN_NEXT_STEPS_2.md  EVERGREEN_STATUS.md  EVERGREEN_WATCHERS.md  LICENSE  README.md  agent_config.example.yaml  evergreen.md  pyproject.toml
agents/: orchestrator.py
agents/specialists/: _base.py  competitive_analysis.py  finance.py  hiring.py  retention.py
agents/watchers/: market_watcher.py  metrics_watcher.py
clock/: sim_clock.py
core/: company_data.py  company_profile.py  events.py
core/sources/: fake_stripe.py
