[project]
name = "evergreen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "band-sdk[crewai,langgraph]>=1.0.0",
    "crewai[google-genai,litellm]>=1.14.3",
    "langchain-openai>=1.3.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
